<resources>
    <string name="FB_APP_ID">208767595810948</string>
    <string name="FB_APP_ID_TEST">208767595810948</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_bankin_plus">"Bankin' Plus+"</string>
    <string name="account_premium_wording">You have</string>
    <string name="account_selection">Account selection</string>
    <string name="account_selection_edit_error">"Couldn't proceed… Please try again later"</string>
    <string name="account_selection_edit_success">Your changes have been saved</string>
    <string name="accounts_all_empty">No account saved</string>
    <string name="accounts_loans_empty">No loan saved</string>
    <string name="accounts_menu_all">All</string>
    <string name="accounts_menu_checkings">Checkings</string>
    <string name="accounts_menu_checkings_pro">Pro checkings</string>
    <string name="accounts_menu_header_all">Total balance</string>
    <string name="accounts_menu_header_all_pro">Total pro balance</string>
    <string name="accounts_menu_header_loans">Total loan</string>
    <string name="accounts_menu_header_loans_pro">Total pro loan</string>
    <string name="accounts_menu_header_savings">Total saving</string>
    <string name="accounts_menu_header_savings_pro">Total pro saving</string>
    <string name="accounts_menu_loans">Loans</string>
    <string name="accounts_menu_loans_pro">Pro loans</string>
    <string name="accounts_menu_savings">Savings</string>
    <string name="accounts_menu_savings_pro">Pro savings</string>
    <string name="accounts_savings_account_balance">Balance of %1$s</string>
    <string name="accounts_savings_account_credits">Credits</string>
    <string name="accounts_savings_account_debits">Debits</string>
    <string name="accounts_savings_account_interests">Interests</string>
    <string name="accounts_savings_empty">No saving account</string>
    <string name="accounts_selection">Accounts selection</string>
    <string name="action_icon_add"></string>
    <string name="action_icon_alarm"></string>
    <string name="action_icon_analyze"></string>
    <string name="action_icon_back_arrow"></string>
    <string name="action_icon_cup"></string>
    <string name="action_icon_like"></string>
    <string name="action_icon_next_arrow"></string>
    <string name="action_icon_question"></string>
    <string name="action_icon_quick_message"></string>
    <string name="action_icon_save_money"></string>
    <string name="action_icon_shop"></string>
    <string name="action_icon_success"></string>
    <string name="action_icon_target"></string>
    <string name="action_icon_validate"></string>
    <string name="add_a_bank">Add a bank</string>
    <string name="add_account">Add an account</string>
    <string name="add_account_change_password_error_confirm">"Your new passwords don't match"</string>
    <string name="add_account_change_password_error_old_password">The old password in incorrect</string>
    <string name="add_account_change_password_new">Choose a new password</string>
    <string name="add_account_change_password_new_confirm">Confirm your new password</string>
    <string name="add_account_change_password_old">Confirm your current password</string>
    <string name="add_account_connection">Connection</string>
    <string name="add_account_know_more">Learn more</string>
    <string name="add_account_need_to_change_password">Update password</string>
    <string name="add_account_same_credentials">Enter the same credentials as the ones you enter on your bank website</string>
    <string name="add_account_security">"Bankin' is safe and secured."</string>
    <string name="add_account_security_title">Security</string>
    <string name="add_alert_no_account">Please select an account</string>
    <string name="add_alert_no_amount">Please enter an amount</string>
    <string name="add_alert_success">This notification has been added successfully</string>
    <string name="adding_account_add_button">Add a bank</string>
    <string name="adding_account_classification">Categorization</string>
    <string name="adding_account_connection">Secured connection</string>
    <string name="adding_account_credentials_error_button">"I'll do it later"</string>
    <string name="adding_account_credentials_error_button_center">Update my credentials</string>
    <string name="adding_account_credentials_error_description">Your banks credentials are invalid</string>
    <string name="adding_account_credentials_error_title">Error</string>
    <string name="adding_account_finalization">Finalization</string>
    <string name="adding_account_finish_error_button">Got it!</string>
    <string name="adding_account_finish_error_button_center_change_password">Try again</string>
    <string name="adding_account_finish_error_button_change_password">Cancel</string>
    <string name="adding_account_finish_error_description">Your account was successfully added. It is still being synchronised. It might take up to a few hours.</string>
    <string name="adding_account_finish_error_description_change_password">Something went wrong. An error occurred.</string>
    <string name="adding_account_finish_error_title">In progress...</string>
    <string name="adding_account_finish_error_title_change_password">Something went wrong</string>
    <string name="adding_account_generic_error_button">Cancel</string>
    <string name="adding_account_generic_error_description">Something went wrong. Please try again later.</string>
    <string name="adding_account_generic_error_title">Error</string>
    <string name="adding_account_in_progress">Loading</string>
    <string name="adding_account_otp_hint">Verification code</string>
    <string name="adding_account_otp_title">Identity verification</string>
    <string name="adding_account_otp_title_with_bank_name">Identity verification for %1$s</string>
    <string name="adding_account_ready">Your account is created!</string>
    <string name="adding_account_stars">+ than 12 460 feedbacks with 5 stars</string>
    <string name="adding_account_success_button">See my accounts</string>
    <string name="adding_account_success_button_for_pro_validation">Next</string>
    <string name="adding_account_success_description">Your accounts have been successfully synchronised!</string>
    <string name="adding_account_success_description_change_password">"Your password has been successfully updated. Keep in mind that you'll have to use it for your next connection on your bank website"</string>
    <string name="adding_account_success_description_for_pro_validation">Your account was successfully added. As it is your 4th professional account on Bankin’, we need additional information for regulatory purposes.</string>
    <string name="adding_account_success_title">Well done!</string>
    <string name="btn_discover_transfer">Start</string>
    <string name="btn_info_transfer">Create a security code</string>
    <string name="confirm_txt_flag_1">Bankin’ is a French company</string>
    <string name="confirm_txt_flag_2">regulated by ACPR (backed by Banque de France)</string>
    <string name="confirm_txt_graph_1">Complete overview</string>
    <string name="confirm_txt_graph_2">of your finances</string>
    <string name="confirm_txt_like_1">2.5 million users</string>
    <string name="confirm_txt_like_2">trust us everyday</string>
    <string name="confirm_txt_lock_1">The same security standards</string>
    <string name="confirm_txt_lock_2">as international banks</string>
    <string name="confirm_txt_title">Your account is created!</string>
    <string name="connect_home">GET STARTED</string>
    <string name="desc_info_transfer">This secure code will be requested at the opening of the application and each request for new transfer</string>
    <string name="home_desc_1">All your bank accounts, in real-time</string>
    <string name="home_desc_2">All your financial data at a glance with graphs and analysis</string>
    <string name="home_desc_3">Be notified in real time</string>
    <string name="home_title">Take care of your money</string>
    <string name="icon_back_transfer">3</string>
    <string name="icon_check"></string>
    <string name="icon_close"></string>
    <string name="icon_close_regular"></string>
    <string name="icon_lock_pincode">!</string>
    <string name="intercom_new_conversation">New conversation</string>
    <string name="intercom_see_past_conversations">See previous</string>
    <string name="intercom_start_a_conversation">Start a conversation</string>
    <string name="logo_full_icon"></string>
    <string name="rate_do_you_like_bankin">Do you like using <b>"Bankin'"</b>?</string>
    <string name="rate_no">No…</string>
    <string name="rate_no_description">I have some feedbacks</string>
    <string name="rate_play_store">Leave a rate on the Play Store</string>
    <string name="rate_thank_you">Thanks a lot!</string>
    <string name="rate_yes">Yes!</string>
    <string name="rate_yes_description">"It's a good job"</string>
    <string name="subtitle_discover_transfer">Transfer money from an account to another easily.</string>
    <string name="title_discover_transfer">Discover the transfer functionality</string>
    <string name="title_info_transfer">Creating a 6 digit code</string>
</resources>