<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/backgroundDark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_create_pincode" android:background="@drawable/ripple_green_transfer" android:layout_width="fill_parent" android:layout_height="80.0dip" android:text="@string/btn_info_transfer" android:layout_alignParentBottom="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_above="@id/btn_create_pincode">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="@color/blueGreyTwo" android:gravity="start" android:id="@id/btn_back_info_pincode" android:background="@drawable/ripple_white_with_mask" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_back_transfer" />
                <TextView android:textSize="20.0sp" android:textColor="@color/blueGreyTwo" android:layout_gravity="end" android:id="@id/btn_close_info_pincode" android:background="@drawable/ripple_white_with_mask" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_close_regular" />
            </FrameLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
                <TextView android:textSize="50.0sp" android:textColor="@color/transferGreen" android:id="@id/img_lock_info_pincode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_lock_pincode" />
                <TextView android:textSize="21.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/title_info_pincode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/title_info_transfer" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                <TextView android:textSize="16.0sp" android:textColor="@color/paleGreyTwo" android:gravity="center" android:id="@id/desc_info_pincode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="40.0dip" android:text="@string/desc_info_transfer" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>