<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:fillViewport="true" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <RelativeLayout android:id="@id/transfer_done_anim_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_centerHorizontal="true">
                <ImageView android:id="@id/confirm_creation_circle_blue" android:layout_width="110.0dip" android:layout_height="110.0dip" android:src="@drawable/confirm_creation_circle_blue" android:layout_centerInParent="true" />
                <ImageView android:id="@id/confirm_creation_circle_white" android:layout_width="95.0dip" android:layout_height="95.0dip" android:src="@drawable/confirm_creation_circle_white" android:layout_centerInParent="true" />
                <TextView android:textSize="50.0sp" android:textColor="@color/skyBlue" android:id="@id/confirm_creation_result_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_check" android:layout_centerInParent="true" />
            </RelativeLayout>
            <TextView android:textSize="26.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/confirm_txt_title" android:layout_below="@id/transfer_done_anim_container" android:layout_centerHorizontal="true" />
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/transfer_done_anim_container" android:layout_centerHorizontal="true" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/confirm_container_lock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70.0dip">
                    <ImageView android:id="@id/confirm_img_lock" android:layout_width="36.0dip" android:layout_height="wrap_content" android:src="@drawable/lock" />
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_lock_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_lock_1" android:layout_marginStart="22.0dip" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_lock_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_lock_2" android:layout_marginStart="22.0dip" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/confirm_container_like" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/confirm_container_lock">
                    <ImageView android:id="@id/confirm_img_like" android:layout_width="36.0dip" android:layout_height="wrap_content" android:src="@drawable/like" />
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_like_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_like_1" android:layout_marginStart="22.0dip" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_like_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_like_2" android:layout_marginStart="22.0dip" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/confirm_container_flag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/confirm_container_like">
                    <ImageView android:id="@id/confirm_img_flag" android:layout_width="36.0dip" android:layout_height="wrap_content" android:src="@drawable/flag" />
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_flag_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_flag_1" android:layout_marginStart="22.0dip" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_flag_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_flag_2" android:layout_marginStart="22.0dip" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/confirm_container_graph" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="30.0dip" android:layout_below="@id/confirm_container_flag">
                    <ImageView android:id="@id/confirm_img_graph" android:layout_width="36.0dip" android:layout_height="wrap_content" android:src="@drawable/graph_img" />
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_graph_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_graph_1" android:layout_marginStart="22.0dip" />
                        <TextView android:textSize="14.0sp" android:textColor="@color/darkGreyBlueTwo" android:id="@id/confirm_txt_graph_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:text="@string/confirm_txt_graph_2" android:layout_marginStart="22.0dip" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/confirm_add_bank" android:background="@drawable/ripple_dark_mint" android:layout_width="fill_parent" android:layout_height="80.0dip" android:text="@string/add_a_bank" android:textAllCaps="true" />
</LinearLayout>