<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/backgroundDark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_start_discover" android:background="@drawable/ripple_green_transfer" android:layout_width="fill_parent" android:layout_height="80.0dip" android:text="@string/btn_discover_transfer" android:layout_alignParentBottom="true" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_above="@id/btn_start_discover">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textColor="@color/blueGreyTwo" android:layout_gravity="end" android:id="@id/btn_close_discover" android:background="@drawable/ripple_white_with_mask" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_close_regular" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip">
                <ImageView android:layout_gravity="center" android:id="@id/img_discover" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/phone_discover" android:adjustViewBounds="true" android:contentDescription="@string/title_discover_transfer" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
                <TextView android:textSize="21.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/title_discover" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/title_discover_transfer" />
                <TextView android:textSize="16.0sp" android:textColor="@color/paleGreyTwo" android:gravity="center" android:id="@id/subtitle_discover" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="40.0dip" android:text="@string/subtitle_discover_transfer" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>