<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/new_conversation_card_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/intercom_home_card_margin" android:layout_marginRight="@dimen/intercom_home_card_margin" style="@style/intercom_card_with_border_and_shadow"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/intercom_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/intercom_conversation_card_padding" android:layout_marginTop="@dimen/intercom_conversation_card_padding" android:layout_marginRight="@dimen/intercom_conversation_card_padding" android:text="@string/intercom_start_a_conversation" />
    <io.intercom.android.sdk.views.OfficeHoursTextView android:textSize="14.0sp" android:textColor="@color/intercom_conversation_card_summary_text" android:id="@id/office_hours" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/intercom_conversation_card_padding" android:layout_marginRight="@dimen/intercom_conversation_card_padding" android:lineSpacingExtra="7.0sp" />
    <Space android:layout_width="fill_parent" android:layout_height="14.0dip" />
    <android.support.constraint.ConstraintLayout android:id="@id/constraint_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/intercom_conversation_card_padding" android:layout_marginRight="@dimen/intercom_conversation_card_padding" android:layout_marginBottom="@dimen/intercom_conversation_card_padding">
        <FrameLayout android:id="@id/avatar_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@id/new_conversation_button" android:text="@string/intercom_new_conversation" style="@style/intercom_home_new_conversation_button" />
        <TextView android:id="@id/see_previous" android:visibility="gone" android:text="@string/intercom_see_past_conversations" style="@style/intercom_home_all_conversation_button" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>